docs(k8s): Add more help for new users.
Includes a starter template for Trivy operator.

Signed-off-by: Simar <simar@linux.com>

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -50,6 +50,8 @@ templates:
   rego-package: postee.rawmessage.json
 - name: vuls-cyclonedx                  # export vulnerabilities to CycloneDX XML
   rego-package: postee.vuls.cyclondx
+- name: trivy-operator-slack
+  rego-package: postee.trivyoperator.slack
 
 # Rules are predefined rego policies that can be used to trigger routes
 rules:
