--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-posteeConfig:
+posteeConfig: |
   # The configuration file contains a general settings section,
   # routes, templates and actions sections.
   
