Updated posteeConfig as values not as file (#467)
* Updated posteeConfig as values not as file

* fix getting values in cm

--- a/deploy/helm/postee/templates/cfg-configmap.yaml
+++ b/deploy/helm/postee/templates/cfg-configmap.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: {{ include "postee.fullname" . }}-cfg
 data:
-{{ (tpl (.Files.Glob .Values.posteeConfigPath).AsConfig . ) | indent 2 }}
+  cfg.yaml: |
+{{ .Values.posteeConfig  | indent 4 }}
