feat(Helm): Provide sensitive values as secret
Issue: #479

--- a/deploy/helm/postee/templates/postee.yaml
+++ b/deploy/helm/postee/templates/postee.yaml
@@ -45,7 +45,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/cfg-configmap.yaml") . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath "/cfg-secret.yaml") . | sha256sum }}
       {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -72,7 +72,7 @@ spec:
           imagePullPolicy: {{ .Values.imageInit.pullPolicy }}
           command: ["/bin/cp", "/k8s/cfg.yaml", "/data/cfg.yaml"]
           volumeMounts:
-            - name: {{ $fullName }}-configmap-vol
+            - name: {{ $fullName }}-secret-vol
               mountPath: /k8s
             - name: {{ $fullName }}-config
               mountPath: {{ .Values.persistentVolume.mountPathConfig }}
@@ -106,9 +106,9 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
-        - configMap:
-            name: {{ $fullName }}-cfg
-          name: {{ $fullName }}-configmap-vol
+        - secret:
+            secretName: {{ $fullName }}-secret
+          name: {{ $fullName }}-secret-vol
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
