--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -114,6 +114,7 @@ posteeConfig: |
     type: slack
     enable: false
     url: https://hooks.slack.com/services/TAAAA/BBB/<key>
+    tls-verify: false # Enable skip TLS Verification. Default: false.
 
   - name: ms-team
     type: teams
