--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -132,6 +132,7 @@ posteeConfig: |
     url: http://localhost:8088 # Mandatory. Url of a Splunk server
     token: <token>             # Mandatory. a HTTP Event Collector Token
     size-limit: 10000          # Optional. Maximum scan length, in bytes. Default: 10000
+    tls-verify: false          # Enable skip TLS Verification. Default: false.
 
   - name: my-servicenow
     type: serviceNow
