--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -277,3 +277,8 @@ persistentVolume:
   ##
   # storageClass: "-"
   # existingClaim: ""
+
+## Secrets as environment variables
+## If defined, these secrets are mounted as environment variables
+## envFrom:
+##   - my-env-secret-1
