--- a/deploy/helm/postee/templates/cfg-secret.yaml
+++ b/deploy/helm/postee/templates/cfg-secret.yaml
@@ -1,3 +1,4 @@
+{{ if not .Values.configuration.existingSecret.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -5,3 +6,4 @@ metadata:
 data:
   cfg.yaml: |
 {{ .Values.posteeConfig  | b64enc | indent 4 }}
+{{- end }}
