--- a/deploy/helm/postee/templates/postee.yaml
+++ b/deploy/helm/postee/templates/postee.yaml
@@ -45,7 +45,9 @@ spec:
   template:
     metadata:
       annotations:
+      {{- if not .Values.configuration.existingSecret.enabled }}
         checksum/secret: {{ include (print $.Template.BasePath "/cfg-secret.yaml") . | sha256sum }}
+      {{- end }}
       {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
