--- a/deploy/helm/postee/templates/postee.yaml
+++ b/deploy/helm/postee/templates/postee.yaml
@@ -112,12 +112,18 @@ spec:
               mountPath: {{ .Values.persistentVolume.mountPathRego }}
             - name: {{ $fullName }}-filters
               mountPath: {{ .Values.persistentVolume.mountPathFilters }}
+{{- if .Values.extraVolumeMounts }}
+{{ toYaml .Values.extraVolumeMounts | indent 12 }}
+{{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
         - secret:
             secretName: {{ $fullName }}-secret
           name: {{ $fullName }}-secret-vol
+{{- if .Values.extraVolumes }}
+{{ toYaml .Values.extraVolumes | indent 8 }}
+{{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
