--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -14,7 +14,7 @@
     "core-js": "^3.18.1",
     "js-yaml": "^4.1.0",
     "node-forge": "^1.3.0",
-    "vue": "^2.6.11",
+    "vue": "2.7.0",
     "vue-codemirror": "^4.0.6",
     "vue-json-pretty": "^1.8.3",
     "vue-json-viewer": "2",
@@ -29,8 +29,7 @@
     "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.18.0",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vue": "^7.18.0"
   },
   "resolutions": {
     "ansi-regex": "5.0.1",
