--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -3,15 +3,15 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "serve": "vite serve",
+    "build": "vite build",
+    "lint": "eslint --ignore-path .gitignore src/**/*.{js,vue}"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "codemirror-rego": "^1.1.0",
-    "core-js": "^3.18.1",
     "js-yaml": "^4.1.0",
     "node-forge": "^1.3.0",
     "vue": "2.7.0",
@@ -24,12 +24,10 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.6",
-    "@vue/cli-plugin-eslint": "^5.0.6",
-    "@vue/cli-service": "^5.0.8",
-    "babel-eslint": "^10.1.0",
+    "@vitejs/plugin-vue2": "^2.2.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.18.0"
+    "eslint-plugin-vue": "^7.18.0",
+    "vite": "^4.3.9"
   },
   "resolutions": {
     "ansi-regex": "5.0.1",
@@ -40,15 +38,12 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "es2021": true
     },
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
     "rules": {}
   },
   "browserslist": [
