--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -76,6 +76,8 @@ data:
         legacy-scan-renderer: slack
       - name: custom-email
         url: null
+      - name: trivy-operator-jira
+        rego-package: postee.trivyoperator.jira
       - name: trivy-operator-slack
         rego-package: postee.trivyoperator.slack
     name: tenant
