docs: add comment when specifying image tags for postee-ui
Co-authored-by: DmitriyLewen <91113035+DmitriyLewen@users.noreply.github.com>

--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -186,7 +186,9 @@ posteUi:
     # usernameKey: username
     # passwordKey: password
   image: aquasec/postee-ui
-  # tag: "2.12.0-amd64"
+  # By default `tag` is taken from `.Chart.AppVersion`
+  # To use different version - uncomment this line and enter the desired version
+  # tag: ""
 
 configuration:
   # If set to true, ensure the externally generated secret to be named
