fix: send email with local name via custom client (#607)
* fix: send email with local name via custom client

* remove unneeded (duplicated) checks

* add `local-name` to a config file

* remove unneeded `return`

* change logs

* refactor: using smtp.Dial()

* add comments for the new fuction

* update: change a field name

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -96,6 +96,7 @@ actions:
   host:      # Mandatory: SMTP host name (e.g. smtp.gmail.com)
   port:      # Mandatory: SMTP server port (e.g. 587)
   sender:    # Mandatory: The email address to use as a sender
+  client-host-name: # Optional: setting the local client name instead of `localhost`
   recipients: ["", ""]  # Mandatory: comma separated list of recipients
 
 - name: my-email-smtp-server
