add support for .spec.topologySpreadConstraints on Postee server
- solves #617
- allow the end user to define topologySpreadConstraints
- we focus on server instance first because we do not
  think that it is that important to spread the UI to
  different availability zones

--- a/deploy/helm/postee/templates/postee.yaml
+++ b/deploy/helm/postee/templates/postee.yaml
@@ -117,6 +117,10 @@ spec:
 {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      {{- with .Values.topologySpreadConstraints }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       volumes:
         - secret:
             secretName: {{ $fullName }}-secret
