--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # v2.4.0
       - name: Setup golangci-lint
-        uses: golangci/golangci-lint-action@5c56cd6c9dc07901af25baab6f2b0d9f3b7c3018 # v2.5.2
+        uses: golangci/golangci-lint-action@3.7.0
         with:
           args: --verbose
-          version: latest
+          version: v1.54
       - name: check spell
         uses: codespell-project/actions-codespell@master
         with:
