--- a/cfg.yaml
+++ b/cfg.yaml
@@ -36,6 +36,8 @@ templates:
   rego-package:  postee.vuls.slack      #  Slack template REGO package (available out of the box)
 - name: vuls-html                       #  Out of the box HTML template
   rego-package:  postee.vuls.html       #  HTML template REGO package (available out of the box)
+- name: vuls-email                      #  Out of the box HTML template for email
+  rego-package: postee.vuls.email       #  HTML template REGO package (available out of the box)
 - name: raw-html                        #  Raw message json
   rego-package:  postee.rawmessage.html #  HTML template REGO package (available out of the box)
 - name: legacy                          #  Out of the box legacy Golang template
