feat: add option to set priorityClassName using helm values
Signed-off-by: martijnvdp <m.vanderploeg@nl.ccv.eu>

--- a/deploy/helm/postee/templates/postee-ui.yaml
+++ b/deploy/helm/postee/templates/postee-ui.yaml
@@ -25,6 +25,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.posteUi.priorityClassName }}
+      priorityClassName: {{ .Values.posteUi.priorityClassName }}
+      {{- end }}
       serviceAccountName: {{ include "postee.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
