--- a/.github/workflows/aqua-cloud.yml
+++ b/.github/workflows/aqua-cloud.yml
@@ -17,7 +17,7 @@ jobs:
           set-safe-directory: '/github/workspace'
 
       - name: Ownership workaround
-        run: git config --system --add safe.directory /github/workspace
+        run: git config --system --add safe.directory '*'
 
       - name: Run Trivy vulnerability scanner against Aqua Cloud
         uses: aquasecurity/trivy-action@0.24.0
